--- a/BrewBuddy/BrewBuddy/Info.plist
+++ b/BrewBuddy/BrewBuddy/Info.plist
@@ -2,9 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location needed to get nearby Breweries</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.444053017248-u6go1h7mqr08f1iqj6fq5rturb73m7c2</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
